--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "polished": "^4.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.0.0",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
+    "uuidv4": "^6.2.10",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
