--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "polished": "^4.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.10.1",
     "react-hot-toast": "^2.0.0",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
