--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll-to-bottom": "^4.1.2",
     "react-switch": "^6.0.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
