--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll-to-bottom": "^4.1.2",
+    "react-scrollable-feed": "^1.3.1",
     "react-switch": "^6.0.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
